added shopcards to gateway
