# services/shop_cards/server/db/models.go
@@ -3,14 +3,15 @@ package db
 import "time"
 
 type ShopCard struct {
-	UUID        string    `gorm:"type:varchar(36);primaryKey"`
-	Name        string    `gorm:"type:varchar(100);not null"`
-	CreatedAt   time.Time `gorm:"autoCreateTime"`
-	Description string    `gorm:"type:varchar(500)"`
-	Category    string    `gorm:"type:varchar(100)"`
-	Price       *float32  `gorm:"type:decimal(10,2);"`
-	Visible     bool      `gorm:"default:true"`
-	CoverURL    *string   `gorm:"type:varchar(100)"`
+	UUID        string                  `gorm:"type:varchar(36);primaryKey"`
+	Name        string                  `gorm:"type:varchar(100);not null"`
+	CreatedAt   time.Time               `gorm:"autoCreateTime"`
+	Description string                  `gorm:"type:varchar(500)"`
+	Category    string                  `gorm:"type:varchar(100)"`
+	Price       *float32                `gorm:"type:decimal(10,2);"`
+	Visible     bool                    `gorm:"default:true"`
+	CoverURL    *string                 `gorm:"type:varchar(100)"`
+	Metadata    *map[string]interface{} `gorm:"type:jsonb;serializer:json" json:"metadata"`
 }
 
 var (
